<resources>
    <string name="app_name">FragmentsLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_first_red">Red Fragment</string>
    <string name="button_first_green">Green Fragment</string>
    <string name="button_first_blue">Blue Fragment</string>
    <string name="button_first_purp">Purple Fragment</string>
    <string name="button_first_gold">Gold Fragment</string>
    <string name="text_color_display">Color</string>
    <string name="all_color_key">key</string>
</resources>
